<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC47"
    tools:context=".FoodPresets">

    <TextView
        android:id="@+id/Presets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#00BCD4"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/food_presets"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Food1Select"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/black_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Presets"
        app:srcCompat="@drawable/black_icon" />

    <ImageButton
        android:id="@+id/Food2Select"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/black_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Food1Select"
        app:srcCompat="@drawable/black_icon" />

    <ImageButton
        android:id="@+id/Food3Select"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/black_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Food2Select"
        app:srcCompat="@drawable/black_icon" />

    <TextView
        android:id="@+id/Food1Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="147dp"
        android:text="@string/Food1Option"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Food2Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="50dp"
        android:text="@string/Food2Option"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Food1Option" />

    <TextView
        android:id="@+id/Food3Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="50dp"
        android:text="@string/Food3Option"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Food2Option" />

    <Button
        android:id="@+id/GoToTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        android:background="@color/white"
        android:text="@string/go_to_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Presets" />
</androidx.constraintlayout.widget.ConstraintLayout>